--- a/index.html
+++ b/index.html
@@ -5,5 +5,4 @@
   </img>
   </a>
 
-<link href="https://robocop79.github.io/images/favicon.ico"image/x-icon">
-
+<link rel="shortcut icon" type="image/png" href="https://robocop79.github.io/images/favicon.png">
