--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <link rel="shortcut icon" type="image/png" href="https://robocop79.github.io/images/favicon.png">
 
-<a href="https://robocop79.githhub.io/Websiteland/Cornhub/index.html">
+<a href="https://robocop79.github.io/Websiteland/Cornhub/index.html">
 <img src="https://robocop79.github.io/images/baconcornhub.png">
 </img>
 </a>
