--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<div id="trigger" style="text-align:center;margin:auto;color:#888888;font-size:40px;font-weight:bold;">
+<div id= style="text-align:center;margin:auto;color:#888888;font-size:40px;font-weight:bold;">
 	
     <audio preload="auto" id="bay" src="https://robocop79.github.io/Websiteland/blackandyellow7seconds.mp3" type="audio/mp3"></audio>
 
