--- a/index.html
+++ b/index.html
@@ -36,37 +36,5 @@
 <img src="https://robocop79.github.io/images/baconcornhub.png">
 </img>
 </a>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<div id= style="text-align:center;margin:auto;color:#888888;font-size:40px;font-weight:bold;">
-	
-    <audio preload="auto" id="bay" src="https://robocop79.github.io/Websiteland/blackandyellow7seconds.mp3" type="audio/mp3"></audio>
-
-		<script>
-		$("#grad1 a").each(function(i) {
-  if (i != 0) {
-    $("#bay").parent()
-    .clone()
-    .attr("id", "bay" + i)
-    .appendTo($(this).parent());
-  }
-  $(this).data("bay", i);
-})
-.mouseenter(function() {
-  $("#bay" + $(this).data("bay"))[0].play();
-});
-		</script>
-	    
-	    <style>
-		    #trigger {
- height:1000px;
-   width:1000px
- border:1px solid black;
- padding:15px;
- color:white;
- background: repeating-radial-gradient(at center, black 10%, yellow 20%);
- }
-	    </style>
-	    
-</div>
+<br>
+<p style="background-image: url(https://robocop79.github.io/images/SubwayRB.png); font-size: 20pt">MakeUseOf presents</p>
