--- a/index.html
+++ b/index.html
@@ -37,4 +37,6 @@
 </img>
 </a>
 <br>
-<p style="background-image: url(https://robocop79.github.io/images/SubwayRB.png); font-size: 20pt">MakeUseOf presents</p>
+<object id="contentarea" standby="loading data, please wait..."  
+    title="loading data, please wait..." width="100%" height="53%" 
+    type="text/html" data="https://robocop79.github.io/CSS/RB420Cube.html"></object>
