Object Overflow Hidden

--- a/index.html
+++ b/index.html
@@ -39,4 +39,4 @@
 <br>
 <object id="contentarea" standby="loading data, please wait..."  
     title="loading data, please wait..." width="25%" height="50%" 
-    type="text/html" data="https://robocop79.github.io/CSS/RB420Cube.html"></object>
+    type="text/html" data="https://robocop79.github.io/CSS/RB420Cube.html" style="overflow: hidden;"></object>
