--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 </img>
 </a>
 <br>
-<iframe id="contentarea" standby="loading data, please wait..."  
-    title="loading data, please wait..." width="25%" height="50%" 
-    type="text/html" data="https://robocop79.github.io/CSS/RB420Cube.html" scrolling="no"></iframe>
+<iframe id="contentarea" width="50%" height="75%" src="https://robocop79.github.io/CSS/RB420Cube.html" scrolling="no"></iframe>
+
+<style>
+	#contentarea{overflow:hidden;}
+</style>
