--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@
 	#contentarea{overflow:hidden;}
 </style>
 
-<a href="https://www.youtube.com/channel/UC502zE9oiFGLP__u2JyW0vw"> <img src="https://robocop79.github.io/images/Subcribe.png"> </a>
+<a href="https://www.youtube.com/channel/UC502zE9oiFGLP__u2JyW0vw"> <img src="https://robocop79.github.io/images/Subscribe.png"> </a>
