--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <head>
+
+<script type="text/javascript">
+if (screen.width <= 750) {
+document.location = "https://robocop79.github.io/mobile.html";
+}
+</script>
+
+<script>if(/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)){
+window.location ="https://robocop79.github.io/mobile.html";}</script>	
+
 <!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="https://robocop79.github.io/images/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="https://robocop79.github.io/images/favicon.ico">
