--- a/404.html
+++ b/404.html
@@ -1,25 +1,25 @@
 <head>
 <!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="robocop79.github.io/images/404/favicons/404.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="robocop79.github.io/images/404/favicons/404.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="robocop79.github.io/images/404/favicons/404-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="robocop79.github.io/images/404/favicons/404-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="robocop79.github.io/images/404/favicons/404-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="robocop79.github.io/images/404/favicons/404-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="robocop79.github.io/images/404/favicons/404-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="robocop79.github.io/images/404/favicons/404-16.png">
-	<link rel="apple-touch-icon" href="robocop79.github.io/images/404/favicons/404-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="robocop79.github.io/images/404/favicons/404-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="robocop79.github.io/images/404/favicons/404-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="robocop79.github.io/images/404/favicons/404-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="robocop79.github.io/images/404/favicons/404-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="robocop79.github.io/images/404/favicons/404-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="robocop79.github.io/images/404/favicons/404-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="robocop79.github.io/images/404/favicons/404-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="robocop79.github.io/images/404/favicons/404-180.png">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="https://robocop79.github.io/images/404/favicons/404.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="https://robocop79.github.io/images/404/favicons/404-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="https://robocop79.github.io/images/404/favicons/404-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://robocop79.github.io/images/404/favicons/404-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="https://robocop79.github.io/images/404/favicons/404-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://robocop79.github.io/images/404/favicons/404-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://robocop79.github.io/images/404/favicons/404-16.png">
+	<link rel="apple-touch-icon" href="https://robocop79.github.io/images/404/favicons/404-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://robocop79.github.io/images/404/favicons/404-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://robocop79.github.io/images/404/favicons/404-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="https://robocop79.github.io/images/404/favicons/404-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="https://robocop79.github.io/images/404/favicons/404-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://robocop79.github.io/images/404/favicons/404-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://robocop79.github.io/images/404/favicons/404-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://robocop79.github.io/images/404/favicons/404-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://robocop79.github.io/images/404/favicons/404-180.png">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="robocop79.github.io/images/404/favicons/404-144.png">
-	<meta name="msapplication-config" content="robocop79.github.io/images/404/favicons/browserconfig.xml">
+	<meta name="msapplication-TileImage" content="https://robocop79.github.io/images/404/favicons/404-144.png">
+	<meta name="msapplication-config" content="https://robocop79.github.io/images/404/favicons/browserconfig.xml">
 	<!-- ****** faviconit.com favicons ****** -->
 
 <style>
