--- a/404.html
+++ b/404.html
@@ -24,10 +24,11 @@
 
 <style>
 @import url("https://robocop79.github.io/CSS/CST.css")
+@import url("https://robocop79.github.io/Websiteland/CSS/Fonts/fonts.css")
 </style>
 
 </head>
 
-<h1 class="w3-display-middle">
+<h1 class="w3-display-middle" style="font-family: AmericanText;">
 404
 </h1>
