--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 
 <div id="video-player" class="fullscreen-bg">
 	<video class="fullscreen-bg__video" autoplay poster="img/BLUE_DOTS.jpg">
-		<source src="https://robocop79.github.io/video/PS2SS.mp4" type="video/mp4">
+		<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
 		
 	</video>
 	<div class="fullscreen-bg__playlist">
