--- a/404.html
+++ b/404.html
@@ -41,14 +41,6 @@
 		<a href="https://robocop79.github.io/video/ps2rsod.mp4" class="current-video"></a>
 		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
 		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
 	</div>
 </div>
 
@@ -126,7 +118,7 @@ p:last-child {
 
 @media (max-width: 767px) {
     .fullscreen-bg {
-        background: url('../img/BLUE_DOTS.jpg') center center / cover no-repeat;
+        background: url('https://robocop79.github.io/images/Subscribe.png') center center / cover no-repeat;
     }
 
     .fullscreen-bg__video {
