--- a/404.html
+++ b/404.html
@@ -23,28 +23,6 @@
 	<!-- ****** faviconit.com favicons ****** -->
 
 <style>
-@import url("https://robocop79.github.io/Websiteland/CSS/Fonts/fonts.css")	
-</style>
-	
-</head>
-
-<h1 class="w3-display-middle" style="font-family: 'PS1';">
-404
-</h1>
-
-<div id="video-player" class="fullscreen-bg">
-	<video class="fullscreen-bg__video" autoplay poster="img/BLUE_DOTS.jpg">
-		<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
-		
-	</video>
-	<div class="fullscreen-bg__playlist">
-		<a href="https://robocop79.github.io/video/ps2rsod.mp4" class="current-video"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
-	</div>
-</div>
-
-<style>
 * {
 	box-sizing: border-box;
 }
@@ -126,6 +104,28 @@ p:last-child {
     }
 }
 </style>
+	
+<style>
+@import url("https://robocop79.github.io/Websiteland/CSS/Fonts/fonts.css")	
+</style>
+	
+</head>
+
+<h1 style="font-family: 'PS1';">
+404
+</h1>
+
+<div id="video-player" class="fullscreen-bg">
+	<video class="fullscreen-bg__video" autoplay poster="img/BLUE_DOTS.jpg">
+		<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
+		
+	</video>
+	<div class="fullscreen-bg__playlist">
+		<a href="https://robocop79.github.io/video/ps2rsod.mp4" class="current-video"></a>
+		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
+		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
+	</div>
+</div>
 
 <script>
 		( function() {
