--- a/404.html
+++ b/404.html
@@ -135,7 +135,7 @@ p:last-child {
 				playlist = videoPlayer.getElementsByClassName( 'fullscreen-bg__playlist' )[0],
 				source = video.getElementsByTagName( 'source' ),
 				linkList = [],
-				videoDirectory = 'video/',
+				videoDirectory = 'https://robocop79.github.io/video',
 				currentVideo = 0,
 				allLinks = playlist.children,
 				linkNumber = allLinks.length,
