--- a/404.html
+++ b/404.html
@@ -125,6 +125,18 @@ p:last-child {
 		<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
 	</div>
 </div>
+
+<div id="video-player" class="fullscreen-bg">
+		<video class="fullscreen-bg__video" autoplay poster="img/BLUE_DOTS.jpg">
+			<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
+		</video>
+		<div class="fullscreen-bg__playlist">
+			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4" class="current-video"></a>
+			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
+			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
+		</div>
+	</div>
+
 <script>
 		( function() {
 			/* Variables */
