--- a/404.html
+++ b/404.html
@@ -127,7 +127,7 @@ p:last-child {
 </div>
 
 <div id="video-player" class="fullscreen-bg">
-		<video class="fullscreen-bg__video" autoplay poster="img/BLUE_DOTS.jpg">
+		<video class="fullscreen-bg__video" autoplay muted poster="img/BLUE_DOTS.jpg">
 			<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
 		</video>
 		<div class="fullscreen-bg__playlist">
