--- a/404.html
+++ b/404.html
@@ -131,7 +131,7 @@ p:last-child {
 			<source src="https://robocop79.github.io/video/ps2rsod.mp4" type="video/mp4">
 		</video>
 		<div class="fullscreen-bg__playlist">
-			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4" class="current-video"></a>
+			<a href="https://robocop79.github.io/video/ps2rsod.mp4" class="current-video"></a>
 			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
 			<a href="https://robocop79.github.io/video/ps2rsodloop.mp4"></a>
 		</div>
