Added Html5 VTT Subtitles to fix Player Issues

--- a/80sAlkaCold.html
+++ b/80sAlkaCold.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-<script type="text/javascript" src='https://amara.org/embedder-iframe'></script>
+<title>80s Alka-Seltzer Plus Cold Medicine Commercial Subtitles
 </head>
 
 <body>
-<div class="amara-embed" data-url="https://robocop79.github.io/video/80sAlkaCold.mp4" data-team="null"></div>
+<video>
+<source type="video/mp4" src="https://robocop79.github.io/video/80sAlkaCold.mp4">
+<track src="https://robocop79.github.io/subtitles/80sAlkaColdmp4.en.vtt" label="English" kind="captions" srclang="en-us" default>
+</video>
 </body>
 </html>
