Forgot to add controls

--- a/80sAlkaCold.html
+++ b/80sAlkaCold.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<video>
+<video controls width=100% height=100%>
 <source type="video/mp4" src="https://robocop79.github.io/video/80sAlkaCold.mp4">
 <track src="https://robocop79.github.io/subtitles/80sAlkaColdmp4.en.vtt" label="English" kind="captions" srclang="en-us" default>
 </video>
