Forgot Title End tag

--- a/80sAlkaCold.html
+++ b/80sAlkaCold.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>80s Alka-Seltzer Plus Cold Medicine Commercial Subtitles
+<title>80s Alka-Seltzer Plus Cold Medicine Commercial Subtitles </title>
 </head>
 
 <body>
