donald trump art that inspired this site

--- a/ILOVEDICTATORS/index.html
+++ b/ILOVEDICTATORS/index.html
@@ -1,6 +1,32 @@
 <html lang="eng">
 <head>
-<title> ILOVEDICTATORS </title>
+<title> I❤️DICTATORS </title>
 </head>
-<h1> I Love Dictators! </h1>
+<h1> I ❤️ <BR> DICTATORS! </h1>
+
+<body>
+<img src="https://robocop79.github.io/ILOVEDICTATORS/images/DonaldTrump.PNG"></img>
+</body>
+
+<style>
+  h1 {
+  text-align:center;
+  font-family:impact;
+  }
+  
+  h1:hover {
+  color:green;
+  }
+  
+  img {
+   display:block;
+   margin-left:auto;
+   margin-right:auto;
+   width:50%;
+  }
+</style>
+
+<style>
+@import url("");
+</style>
 <html>
